objects/AIA_Plan_Copay_Type__c.object
<CustomObject>
    <fields>
        <fullName>AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AliasName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualMaximumApplies__c</fullName>
        <label>AnnualMaximumApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_Member_Payment_w_Discount__c</fullName>
        <description>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approximate Member Payment-w/Discount</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Sequence_Number__c</fullName>
        <formula>text(Plan_Benefits__r.Sequence_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Sequence Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoinsuranceAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CoinsuranceAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopayAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CopayAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Additional_Increments__c</fullName>
        <formula>(If(AliasName__c='PCP Copay', Plan_Benefits__r.Copay_PCPCopay_AdditionalIncrements__c, (
IF(AliasName__c='Specialist Copay', Plan_Benefits__r.Copay_SpecialistCopay_AddIncrements__c,(
IF(AliasName__c='Per Admission Copay', Plan_Benefits__r.Copay_PerAdmissionCopay_AddtlIncrements__c,( 
IF(AliasName__c='General Copay',Plan_Benefits__r.Copay_AmountRange_AdditionalIncrements__c,NULL 

))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copay Additional Increments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Additional_InvalidIncrements__c</fullName>
        <formula>(If(AliasName__c='PCP Copay', Plan_Benefits__r.Copay_PCPCopay_InvalidIncrements__c, (
IF(AliasName__c='Specialist Copay', Plan_Benefits__r.Copay_SpecialistCopay_InvalidIncrements__c,(
IF(AliasName__c='Per Admission Copay', Plan_Benefits__r.Copay_PerAdmissionCopay_InvalidIncrement__c ,( 
IF(AliasName__c='General Copay',Plan_Benefits__r.Copay_AmountRange_InvalidIncrements__c,NULL 

))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copay Additional InvalidIncrements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_High__c</fullName>
        <formula>(If(AliasName__c='PCP Copay', Plan_Benefits__r.Copay_PCPCopay_High__c, (
IF(AliasName__c='Specialist Copay', Plan_Benefits__r.Copay_SpecialistCopay_High__c,(
IF(AliasName__c='Per Admission Copay', Plan_Benefits__r.Copay_PerAdmissionCopay_High__c,( 
IF(AliasName__c='General Copay',Plan_Benefits__r.Copay_AmountHigh__c,NULL 

))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copay High</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Increment__c</fullName>
        <formula>(If(AliasName__c='PCP Copay', Plan_Benefits__r.Copay_PCPCopay_Increment__c, (
IF(AliasName__c='Specialist Copay', Plan_Benefits__r.Copay_SpecialistCopay_Increment__c,(
IF(AliasName__c='Per Admission Copay', Plan_Benefits__r.Copay_PerAdmissionCopay_Increment__c,( 
IF(AliasName__c='General Copay',Plan_Benefits__r.Copay_AmountIncrement__c,NULL 

))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copay Increment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Low__c</fullName>
        <formula>(If(AliasName__c='PCP Copay', Plan_Benefits__r.Copay_PCPCopay_Low__c, (
IF(AliasName__c='Specialist Copay', Plan_Benefits__r.Copay_SpecialistCopay_Low__c,(
IF(AliasName__c='Per Admission Copay', Plan_Benefits__r.Copay_PerAdmissionCopay_Low__c,(
IF(AliasName__c='General Copay',Plan_Benefits__r.Copay_AmountLow__c,NULL


))))))))</formula>
        <label>Copay Low</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Sequence_Number__c</fullName>
        <formula>IF( AliasName__c = 'PCP Copay', 4,
(IF( AliasName__c = 'Specialist Copay', 3,
(IF( AliasName__c = 'General Copay', 2,
(IF ( AliasName__c = 'Per Admission Copay', 1, 0)))))))+
IF(  TEXT(MandateIndicator__c)  = 'Yes', 10,0)</formula>
        <label>Copay Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeductibleApplies__c</fullName>
        <label>DeductibleApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountApplies__c</fullName>
        <label>DiscountApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount_Percent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discount Amount Percent</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discount Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Applies__c</fullName>
        <label>Discount Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouper_Name__c</fullName>
        <formula>Plan_Benefits__r.Grouper_Name__c</formula>
        <label>Grouper Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsASOOnly__c</fullName>
        <label>IsASOOnly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCovered__c</fullName>
        <label>IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_for_BRF__c</fullName>
        <formula>IF(Jurisdiction__c !='Federal',TRIM(RIGHT(Jurisdiction__c, 2)),Jurisdiction__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction for BRF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MandateIndicator__c</fullName>
        <label>MandateIndicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MandateName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MandateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxPayAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxPayAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinPayAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MinPayAmount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanID__c</fullName>
        <formula>CASESAFEID(Plan_Benefits__r.Benefit_Group__r.Plan_Network__r.Plan__c)</formula>
        <label>PlanID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Benefits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Benefits</label>
        <referenceTo>AIA_Plan_Benefits__c</referenceTo>
        <relationshipLabel>Plan Copay Type</relationshipLabel>
        <relationshipName>Plan_Copay_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScheduledAmounts__c</fullName>
        <label>ScheduledAmounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TierType__c</fullName>
        <label>TierType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred</fullName>
                </value>
                <value>
                    <fullName>Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Self-Injectable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan Copay Type</label>
    <nameField>
        <displayFormat>PCT-{000000}</displayFormat>
        <label>Plan Copay Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Copay Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>AliasName__c</columns>
        <columns>Benefit_Sequence_Number__c</columns>
        <columns>CoinsuranceAmount__c</columns>
        <columns>Copay_Additional_Increments__c</columns>
        <columns>CopayAmount__c</columns>
        <columns>Copay_Increment__c</columns>
        <columns>Copay_Low__c</columns>
        <columns>Jurisdiction_for_BRF__c</columns>
        <columns>IsCovered__c</columns>
        <columns>MandateIndicator__c</columns>
        <columns>MandateName__c</columns>
        <columns>MaxPayAmount__c</columns>
        <columns>MinPayAmount__c</columns>
        <columns>DeductibleApplies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PlanID__c</field>
            <operation>equals</operation>
            <value>a0vP00000049G9e</value>
        </filters>
        <label>All2</label>
    </listViews>
</CustomObject>